fix(cardspace): :construction: Working on cardspace overflow-x
working on overflow-x space, fetch, card generator, and others fixed

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 }
 body{
     height: 100vh;
+    width: 100%;
     background-color: rgb(40, 153, 252);
 }
 /*Header*/
@@ -17,11 +18,12 @@ body{
 #cuerpo{
     height: 85%;
     background-color: rgb(204, 231, 163);
-    display: flex;
 }
 /*Panel Izq*/
 #cuerpoizq{
     width: 80%;
+    height: 100%;
+    float: left;
     background-color: rgb(247, 160, 129);
 }
 
@@ -29,14 +31,37 @@ body{
     height: 80%;
     background-color: rgb(255, 208, 0);
 }
+#mapreal{
+    height: 80%;
+    background-color: blue;
+}
 #mapa{
     height: 100%;
     width: 100%;
 }
-
 #infoterr{
     height: 20%;
     background-color: bisque;
+    
+}
+#cardspace{
+    height: 20%;
+    width: 100%;
+    background-color: pink;
+    overflow-x: scroll;
+}
+.tarj{
+    width: 10%;
+    height: 80%;
+    border-radius: 10%;
+    border: 1px solid black;
+    text-align: center;
+    background-color: white;
+    margin-left: 1%;
+    margin-top: 1%;
+    font-size:small;
+    float: left;
+    display: inline
 }
 #reglas{
     text-align: justify;
@@ -52,5 +77,7 @@ body{
 /*Panel derech*/
 #cuerpoderech{
     width: 20%;
+    height: 100%;
+    float: right;
     background-color: cyan;
 }
